trunk/Archive2/f9/cfed0db8c41f8a/output
+ g++-4.8 -std=c++1y -O2 -Wall -Wextra -Werror -pedantic -pthread main.cpp
main.cpp:12:53: error: use of parameter ‘c’ outside function body
 constexpr auto make(Literal c) -> typename get_type<c[0]>::type
                                                     ^
main.cpp:12:53: error: use of parameter ‘c’ outside function body
main.cpp:12:53: error: use of parameter ‘c’ outside function body
main.cpp:12:57: error: template argument 1 is invalid
 constexpr auto make(Literal c) -> typename get_type<c[0]>::type
                                                         ^
main.cpp: In function ‘int main()’:
main.cpp:26:20: error: ‘make’ was not declared in this scope
     print(make("i3"));
                    ^
